// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`avg avg 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?raum ?raumLabel (AVG(?beschaeftigteAvg) AS ?bep) FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?bta.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?sex.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?beschaeftigteAvg.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?raumLabel)
}
GROUP BY (?raum) (?raumLabel)
LIMIT 10"
`;

exports[`avg avg and filter 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?raum ?raumLabel (AVG(?beschaeftigteAvg) AS ?bep) FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?bta.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?sex.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?beschaeftigteAvg.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?raumLabel)
  FILTER(?raum NOT IN(<http://foo>))
}
GROUP BY (?raum) (?raumLabel)
OFFSET 150
LIMIT 50"
`;

exports[`avg avg distinct 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT DISTINCT ?betriebsart ?betriebsartLabel ?geschlecht ?geschlechtLabel ?raum ?raumLabel ?zeit ?zeitLabel (AVG(DISTINCT ?beschaeftigteAvg) AS ?bep) ?quelle ?glossar ?fussnote ?datenstand ?erwarteteAktualisierung ?korrektur FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?betriebsart.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?geschlecht.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?beschaeftigteAvg.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/GLOSSAR> ?glossar. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/FUSSNOTE> ?fussnote. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/DATENSTAND> ?datenstand. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/ERWARTETE_AKTUALISIERUNG> ?erwarteteAktualisierung. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/KORREKTUR> ?korrektur. }
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?betriebsartLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?geschlechtLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?raumLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?zeitLabel)
}
GROUP BY (?betriebsart) (?betriebsartLabel) (?geschlecht) (?geschlechtLabel) (?raum) (?raumLabel) (?zeit) (?zeitLabel) (?quelle) (?glossar) (?fussnote) (?datenstand) (?erwarteteAktualisierung) (?korrektur)
LIMIT 10"
`;

exports[`basic 4`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?betriebsart ?betriebsartLabel ?geschlecht ?geschlechtLabel ?raum ?raumLabel ?zeit ?zeitLabel ?bep ?quelle ?glossar ?fussnote ?datenstand ?erwarteteAktualisierung ?korrektur FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?betriebsart.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?geschlecht.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/GLOSSAR> ?glossar. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/FUSSNOTE> ?fussnote. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/DATENSTAND> ?datenstand. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/ERWARTETE_AKTUALISIERUNG> ?erwarteteAktualisierung. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/KORREKTUR> ?korrektur. }
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?betriebsartLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?geschlechtLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?raumLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?zeitLabel)
}
LIMIT 10"
`;

exports[`distinct 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT DISTINCT ?raum ?raumLabel FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?bta.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?sex.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?raumLabel)
}
LIMIT 10"
`;

exports[`empty select 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?zeit ?raum ?bta ?sex FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?bta.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?sex.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
}
LIMIT 10"
`;

exports[`execute returns results in a language 1`] = `
Array [
  Object {
    "canton": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
        },
        "language": "fr",
        "value": "Suisse",
      },
      "value": NamedNode {
        "value": "http://environment.ld.admin.ch/foen/px/0703030000_124/dimension/2/0",
      },
    },
    "mes": Object {
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#double",
        },
        "language": "",
        "value": "2.7186645E7",
      },
    },
    "size": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
        },
        "language": "fr",
        "value": "Suisse",
      },
      "value": NamedNode {
        "value": "http://environment.ld.admin.ch/foen/px/0703030000_124/dimension/1/0",
      },
    },
    "variable": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "value": "",
      },
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#gYear",
        },
        "language": "",
        "value": "2015",
      },
    },
  },
  Object {
    "canton": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
        },
        "language": "fr",
        "value": "Zürich",
      },
      "value": NamedNode {
        "value": "http://environment.ld.admin.ch/foen/px/0703030000_124/dimension/2/1",
      },
    },
    "mes": Object {
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#double",
        },
        "language": "",
        "value": "310356.0",
      },
    },
    "size": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#langString",
        },
        "language": "fr",
        "value": "Suisse",
      },
      "value": NamedNode {
        "value": "http://environment.ld.admin.ch/foen/px/0703030000_124/dimension/1/0",
      },
    },
    "variable": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "value": "",
      },
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#gYear",
        },
        "language": "",
        "value": "2015",
      },
    },
  },
]
`;

exports[`group and filter 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?betriebsart ?betriebsartLabel ?geschlecht ?geschlechtLabel ?raum ?raumLabel ?zeit ?zeitLabel ?bep ?quelle ?glossar ?fussnote FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?betriebsart.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?geschlecht.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/GLOSSAR> ?glossar. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/FUSSNOTE> ?fussnote. }
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?betriebsartLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?geschlechtLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?raumLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?zeitLabel)
  FILTER((?raum >= \\"12\\"^^xsd:string) && (?bep >= \\"12\\"^^xsd:string))
}
GROUP BY (?zeit) (?raum) (?betriebsart) (?betriebsartLabel) (?geschlecht) (?geschlechtLabel) (?raumLabel) (?zeitLabel) (?bep) (?quelle) (?glossar) (?fussnote)
LIMIT 10"
`;

exports[`groupBy doesn't duplicate 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?betriebsart ?betriebsartLabel ?geschlecht ?geschlechtLabel ?raum ?raumLabel ?zeit ?zeitLabel ?bep ?quelle ?glossar ?fussnote FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?betriebsart.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?geschlecht.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/GLOSSAR> ?glossar. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/FUSSNOTE> ?fussnote. }
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?betriebsartLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?geschlechtLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?raumLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?zeitLabel)
}
GROUP BY (?zeit) (?raum) (?betriebsart) (?betriebsartLabel) (?geschlecht) (?geschlechtLabel) (?raumLabel) (?zeitLabel) (?bep) (?quelle) (?glossar) (?fussnote)
LIMIT 10"
`;

exports[`groupBy groups with a function 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?betriebsart ?betriebsartLabel ?geschlecht ?geschlechtLabel ?raum ?raumLabel ?zeit ?zeitLabel ?bep ?quelle ?glossar ?fussnote FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?betriebsart.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?geschlecht.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/GLOSSAR> ?glossar. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/FUSSNOTE> ?fussnote. }
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?betriebsartLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?geschlechtLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?raumLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?zeitLabel)
}
GROUP BY (?zeit) (?raum) (?betriebsart) (?betriebsartLabel) (?geschlecht) (?geschlechtLabel) (?raumLabel) (?zeitLabel) (?bep) (?quelle) (?glossar) (?fussnote)
LIMIT 10"
`;

exports[`groupBy with avg doesn't duplicate groupby vars 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT DISTINCT ?raum ?raumLabel ?zeit ?zeitLabel (AVG(DISTINCT ?beschaeftigteAvg) AS ?bep) FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?bta.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?sex.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?beschaeftigteAvg.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?raumLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?zeitLabel)
  FILTER(?raum = <http://something/R3000>)
}
GROUP BY (?raum) (?raumLabel) (?zeit) (?zeitLabel)
LIMIT 10"
`;

exports[`handles languages one language 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?zeit ?zeitLabel ?raum ?bta ?sex ?bep ?quelle FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?bta.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?sex.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabel_en.
    FILTER(LANGMATCHES(LANG(?zeitLabel_en), \\"en\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabel_en, \\"\\"^^xsd:string) AS ?zeitLabel)
}
LIMIT 10"
`;

exports[`handles languages three languages 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?zeit ?zeitLabel ?raum ?bta ?sex ?bep ?quelle FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?bta.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?sex.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabel_fr.
    FILTER(LANGMATCHES(LANG(?zeitLabel_fr), \\"fr\\"^^xsd:string))
  }
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabel_de.
    FILTER(LANGMATCHES(LANG(?zeitLabel_de), \\"de\\"^^xsd:string))
  }
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabel_it.
    FILTER(LANGMATCHES(LANG(?zeitLabel_it), \\"it\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabel_fr, ?zeitLabel_de, ?zeitLabel_it, \\"\\"^^xsd:string) AS ?zeitLabel)
}
LIMIT 10"
`;

exports[`handles languages three languages 2`] = `
Array [
  Object {
    "bep": Object {
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#double",
        },
        "language": "",
        "value": "86.0",
      },
    },
    "bta1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/BTA7100",
      },
    },
    "quelle": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/quelle/SSD002",
      },
    },
    "raum1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/R30000",
      },
    },
    "sex1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/SEX0002",
      },
    },
    "zeit": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "value": "",
      },
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#date",
        },
        "language": "",
        "value": "1966-06-30",
      },
    },
  },
  Object {
    "bep": Object {
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#double",
        },
        "language": "",
        "value": "1.0",
      },
    },
    "bta1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/BTA7100",
      },
    },
    "quelle": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/quelle/SSD002",
      },
    },
    "raum1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/R30000",
      },
    },
    "sex1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/SEX0001",
      },
    },
    "zeit": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "value": "",
      },
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#date",
        },
        "language": "",
        "value": "1966-06-30",
      },
    },
  },
  Object {
    "bep": Object {
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#double",
        },
        "language": "",
        "value": "86.0",
      },
    },
    "bta1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/BTA7100",
      },
    },
    "quelle": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/quelle/SSD002",
      },
    },
    "raum1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/R30000",
      },
    },
    "sex1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/SEX0002",
      },
    },
    "zeit": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "value": "",
      },
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#date",
        },
        "language": "",
        "value": "1967-06-30",
      },
    },
  },
  Object {
    "bep": Object {
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#double",
        },
        "language": "",
        "value": "1.0",
      },
    },
    "bta1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/BTA7100",
      },
    },
    "quelle": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/quelle/SSD002",
      },
    },
    "raum1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/R30000",
      },
    },
    "sex1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/SEX0001",
      },
    },
    "zeit": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "value": "",
      },
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#date",
        },
        "language": "",
        "value": "1967-06-30",
      },
    },
  },
  Object {
    "bep": Object {
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#double",
        },
        "language": "",
        "value": "87.0",
      },
    },
    "bta1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/BTA7100",
      },
    },
    "quelle": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/quelle/SSD002",
      },
    },
    "raum1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/R30000",
      },
    },
    "sex1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/SEX0002",
      },
    },
    "zeit": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "value": "",
      },
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#date",
        },
        "language": "",
        "value": "1968-06-30",
      },
    },
  },
  Object {
    "bep": Object {
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#double",
        },
        "language": "",
        "value": "1.0",
      },
    },
    "bta1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/BTA7100",
      },
    },
    "quelle": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/quelle/SSD002",
      },
    },
    "raum1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/R30000",
      },
    },
    "sex1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/SEX0001",
      },
    },
    "zeit": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "value": "",
      },
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#date",
        },
        "language": "",
        "value": "1968-06-30",
      },
    },
  },
  Object {
    "bep": Object {
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#double",
        },
        "language": "",
        "value": "89.0",
      },
    },
    "bta1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/BTA7100",
      },
    },
    "quelle": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/quelle/SSD002",
      },
    },
    "raum1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/R30000",
      },
    },
    "sex1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/SEX0002",
      },
    },
    "zeit": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "value": "",
      },
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#date",
        },
        "language": "",
        "value": "1969-06-30",
      },
    },
  },
  Object {
    "bep": Object {
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#double",
        },
        "language": "",
        "value": "1.0",
      },
    },
    "bta1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/BTA7100",
      },
    },
    "quelle": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/quelle/SSD002",
      },
    },
    "raum1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/R30000",
      },
    },
    "sex1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/SEX0001",
      },
    },
    "zeit": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "value": "",
      },
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#date",
        },
        "language": "",
        "value": "1969-06-30",
      },
    },
  },
  Object {
    "bep": Object {
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#double",
        },
        "language": "",
        "value": "90.0",
      },
    },
    "bta1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/BTA7100",
      },
    },
    "quelle": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/quelle/SSD002",
      },
    },
    "raum1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/R30000",
      },
    },
    "sex1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/SEX0002",
      },
    },
    "zeit": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "value": "",
      },
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#date",
        },
        "language": "",
        "value": "1970-06-30",
      },
    },
  },
  Object {
    "bep": Object {
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#double",
        },
        "language": "",
        "value": "1.0",
      },
    },
    "bta1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/BTA7100",
      },
    },
    "quelle": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/quelle/SSD002",
      },
    },
    "raum1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/R30000",
      },
    },
    "sex1": Object {
      "value": NamedNode {
        "value": "https://ld.stadt-zuerich.ch/statistics/code/SEX0001",
      },
    },
    "zeit": Object {
      "label": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#string",
        },
        "language": "",
        "value": "",
      },
      "value": Literal {
        "datatype": NamedNode {
          "value": "http://www.w3.org/2001/XMLSchema#date",
        },
        "language": "",
        "value": "1970-06-30",
      },
    },
  },
]
`;

exports[`handles languages two languages 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?zeit ?zeitLabel ?raum ?bta ?sex ?bep ?quelle FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?bta.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?sex.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabel_en.
    FILTER(LANGMATCHES(LANG(?zeitLabel_en), \\"en\\"^^xsd:string))
  }
  OPTIONAL {
    ?zeit (rdfs:label|skos:prefLabel) ?zeitLabel_de.
    FILTER(LANGMATCHES(LANG(?zeitLabel_de), \\"de\\"^^xsd:string))
  }
  BIND(COALESCE(?zeitLabel_en, ?zeitLabel_de, \\"\\"^^xsd:string) AS ?zeitLabel)
}
LIMIT 10"
`;

exports[`ordering group and filter 1`] = `
"PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX qb: <http://purl.org/linked-data/cube#>
PREFIX dc11: <http://purl.org/dc/elements/1.1/>
PREFIX dcterms: <http://purl.org/dc/terms/>
PREFIX skos: <http://www.w3.org/2004/02/skos/core#>
SELECT ?betriebsart ?betriebsartLabel ?geschlecht ?geschlechtLabel ?raum ?raumLabel ?zeit ?zeitLabel ?bep ?quelle ?glossar ?fussnote FROM <https://linked.opendata.swiss/graph/zh/statistics>
WHERE {
  ?observation rdf:type qb:Observation.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/BTA> ?betriebsart.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/SEX> ?geschlecht.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/RAUM> ?raum.
  ?observation <https://ld.stadt-zuerich.ch/statistics/property/ZEIT> ?zeit.
  ?observation <https://ld.stadt-zuerich.ch/statistics/measure/BES> ?bep.
  ?observation qb:dataSet <https://ld.stadt-zuerich.ch/statistics/dataset/BES-RAUM-ZEIT-BTA-SEX>.
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/QUELLE> ?quelle. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/GLOSSAR> ?glossar. }
  OPTIONAL { ?observation <https://ld.stadt-zuerich.ch/statistics/attribute/FUSSNOTE> ?fussnote. }
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?betriebsartLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?geschlechtLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?raumLabel)
  BIND(COALESCE(\\"\\"^^xsd:string) AS ?zeitLabel)
  FILTER((?raum >= \\"12\\"^^xsd:string) && (?bep >= \\"12\\"^^xsd:string))
}
GROUP BY (?zeit) (?raum) (?betriebsart) (?betriebsartLabel) (?geschlecht) (?geschlechtLabel) (?raumLabel) (?zeitLabel) (?bep) (?quelle) (?glossar) (?fussnote)
ORDER BY DESC (?quelle) (?raum)
LIMIT 10"
`;
